# tenzro-store

./: .gitignore  MANIFEST.in  README.md  basic_usage.py  pyproject.toml  requirements.txt  setup.py  tenzro_store.py
.github/workflows/: pypi-publish.yml
docs/: usage.md
tests/: test_tenzro_store.py
