[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tenzro-store"
version = "0.1.0"
description = "Tenzro Store: A modular, extensible storage framework for the Tenzro Ledger Framework"
readme = "README.md"
authors = [{name = "Hilal Agil", email = "hilaal@gmail.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Homepage = "https://github.com/tenzro/tenzro-store"
Repository = "https://github.com/tenzro/tenzro-store.git"